# pqcat

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: retail.csv  retail.parquet
src/pqcat/: main.py
