[project]
name = "pqcat"
description = "pqcat is a fast command-line tool for inspecting Parquet files"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
requires-python = ">=3.12"
dynamic = [
    "version"
]

dependencies = [
    "polars>=1.31.0",
    "tabulate>=0.9.0",
    "typer>=0.16.0",
]

[project.scripts]
pqcat = "pqcat.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pqcat/_version.py"

[dependency-groups]
dev = [
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

